fortsatt stök med databas

--- a/.env
+++ b/.env
@@ -1,5 +1,6 @@
-DB_HOST=dpg-cvofh1pr0fns739m8rd0-a.oregon-postgres.render.com
-DB_USER=moment1_ywlq_user
-DB_PASSWORD=isrd6JNYq9ccamw2dwHgDmf4P7Ey42tB
-DB_NAME=moment1_ywlq
-DB_PORT=5432
+MYSQL_HOST=yamabiko.proxy.rlwy.net
+MYSQL_USER=root
+MYSQL_PASSWORD=QGIYHBeUljXPmWLetEDsaFPRKLEWkKhF
+MYSQL_DATABASE=railway
+MYSQL_PORT=3306
+
