--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "ejs": "^3.1.10",
     "express": "^4.21.2",
     "mysql": "^2.18.1",
+    "mysql2": "^3.14.0",
     "pg": "^8.14.1"
   },
   "devDependencies": {
